// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SankeyChartColorStrategy > should return correct colors for each attribute header items in cases 1 measure and 1 attribute_from 1`] = `
[
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "03",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "04",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "05",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "PhoenixSoft",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "WonderKid",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      },
    },
  },
]
`;

exports[`SankeyChartColorStrategy > should return correct colors for each attribute header items in cases 1 measure and 1 attribute_to 1`] = `
[
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "East Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "West Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460489",
      },
    },
  },
]
`;

exports[`SankeyChartColorStrategy > should return correct colors for each attribute header items in cases 1 measure and 2 attributes 1`] = `
[
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "03",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "04",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "05",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "PhoenixSoft",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "WonderKid",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "East Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "03",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "West Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460489",
      },
    },
  },
]
`;

exports[`SankeyChartColorStrategy > should return correct colors for each attribute header items when color mapping in cases 1 measure and 1 attribute_from 1`] = `
[
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
    },
  },
  {
    "color": {
      "type": "rgb",
      "value": {
        "b": 0,
        "g": 0,
        "r": 255,
      },
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "04",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "05",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "PhoenixSoft",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
      },
    },
  },
  {
    "color": {
      "type": "rgb",
      "value": {
        "b": 0,
        "g": 0,
        "r": 0,
      },
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "WonderKid",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      },
    },
  },
]
`;

exports[`SankeyChartColorStrategy > should return correct colors for each attribute header items when color mapping in cases 1 measure and 1 attribute_to 1`] = `
[
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "East Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "West Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460489",
      },
    },
  },
]
`;

exports[`SankeyChartColorStrategy > should return correct colors for each attribute header items when color mapping in cases 1 measure and 2 attributes 1`] = `
[
  {
    "color": {
      "type": "guid",
      "value": "01",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
    },
  },
  {
    "color": {
      "type": "rgb",
      "value": {
        "b": 0,
        "g": 0,
        "r": 255,
      },
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "04",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "05",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "PhoenixSoft",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
      },
    },
  },
  {
    "color": {
      "type": "rgb",
      "value": {
        "b": 0,
        "g": 0,
        "r": 0,
      },
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "WonderKid",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "02",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "East Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
      },
    },
  },
  {
    "color": {
      "type": "guid",
      "value": "03",
    },
    "headerItem": {
      "attributeHeaderItem": {
        "name": "West Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460489",
      },
    },
  },
]
`;
